--- a/Squader/Base.lproj/Main.storyboard
+++ b/Squader/Base.lproj/Main.storyboard
@@ -145,6 +145,10 @@
                                             </button>
                                         </subviews>
                                     </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Matches" translatesAutoresizingMaskIntoConstraints="NO" id="O8o-zz-gWm">
+                                        <rect key="frame" x="48" y="35" width="278" height="52"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.14689928756476689" green="0.14689928756476689" blue="0.14689928756476689" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
@@ -225,6 +229,7 @@
         <image name="Football" width="170.66667175292969" height="170.66667175292969"/>
         <image name="Football_Clicked" width="170.66667175292969" height="170.66667175292969"/>
         <image name="Gradient " width="414" height="138"/>
+        <image name="Matches" width="309" height="25.666666030883789"/>
         <image name="Tennis" width="170.66667175292969" height="170.66667175292969"/>
         <image name="Tennis_Clicked" width="170.66667175292969" height="170.66667175292969"/>
         <image name="Volleyball" width="170.66667175292969" height="170.66667175292969"/>
